--- a/StudioSync/wwwroot/manifest.json
+++ b/StudioSync/wwwroot/manifest.json
@@ -13,9 +13,14 @@
       "sizes": "512x512"
     },
     {
-      "src": "icon-192.png",
+      "src": "icon-256.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "256x256"
+    },
+    {
+      "src": "icon-128.png",
+      "type": "image/png",
+      "sizes": "128x128"
     }
   ]
 }
