--- a/StudioSync/wwwroot/manifest.json
+++ b/StudioSync/wwwroot/manifest.json
@@ -18,6 +18,11 @@
       "sizes": "256x256"
     },
     {
+      "src": "icon-192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
       "src": "icon-128.png",
       "type": "image/png",
       "sizes": "128x128"
