--- a/StudioSyncServer/StudioSyncServer.csproj
+++ b/StudioSyncServer/StudioSyncServer.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\StudioSync.Core\StudioSync.Core.csproj" />
+  </ItemGroup>
+
 </Project>
