--- a/StudioSyncServer/StudioSyncServer.csproj
+++ b/StudioSyncServer/StudioSyncServer.csproj
@@ -1,10 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.5" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\StudioSync.Core\StudioSync.Core.csproj" />
