--- a/StudioSync/StudioSync.csproj
+++ b/StudioSync/StudioSync.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
     <AllowUnsafeBlocks>False</AllowUnsafeBlocks>
+  <BlazorCacheBootResources>false</BlazorCacheBootResources>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
