--- a/StudioSync.Server/Properties/launchSettings.json
+++ b/StudioSync.Server/Properties/launchSettings.json
@@ -4,17 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:64310",
-      "sslPort": 44327
+      "applicationUrl": "http://localhost:45909",
+      "sslPort": 44351
     }
   },
   "profiles": {
-    "StudioSyncServer": {
+    "StudioSync.Server": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "weatherforecast",
-      "applicationUrl": "https://localhost:7026;http://localhost:5154",
+      "applicationUrl": "https://localhost:7039;http://localhost:5268",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
